sass/_main.scss
* {
    box-sizing: border-box;
}

body {
    background-color: #000;
    text-align: center;
    color: white;
    .container {
        display: flex;
        flex-direction: column;
        
        .header {
            padding-top: 30%;
            align-items: flex-start;
            flex: 1 0 auto;
            .logo{
            
            }
            
            .drop-down{
            
            }
        
        }

        
    }
}

.stories {
    display: flex;
    flex-wrap: wrap;
    div {
        color: white;
        width: 100%;
        position: relative;
        max-width: 100%;
        img {  
            position: relative;
            max-width: 100%;
            width: 100%;
        }   
        a {
            color: white;
            position: absolute;
            width: 100%;
            max-width: 100%;
            padding-top: 100%;
        
        }
        p {
            color: white;
            position: absolute;
            bottom: 0%;
            width: 100%;
            max-width: 100%;
            background: rgba(0,0,0,.6);
        }
    }
    
}

